# guyrux

./: .gitignore  .gitmodules  README.md  deploy.bat  index.md  mkdocs.yml  pre-commit.yaml  pyproject.toml
docs/: index.md
