[tool.poetry]
name = "guyrux - github pages"
version = "0.1.0"
description = ""
authors = ["Gustavo Suto <guyrux@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
taskipy = "^1.12.2"
pre-commit = "^3.7.1"

[tool.poetry.group.doc.dependencies]
mkdocs = "^1.6.0"
mkdocs-mermaid2-plugin = "^1.1.1"
mkdocs-material = "^9.5.25"
mkdocstrings = {extras = ["python"], version = "^0.25.1"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
